--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Iphone in Canada</title>
 
     <link rel="stylesheet" href="css/bootstrap-3.4.1-dist/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="css/bootstrap-sass-3.4.1/assets/stylesheets/_bootstrap.scss">-->
+    <link rel="stylesheet" href="css/bootstrap-sass-3.4.1/assets/stylesheets/bootstrap/_variables.scss">
+    <link rel="stylesheet" href="css/bootstrap-sass-3.4.1/assets/stylesheets/bootstrap/_grid.scss">
     <link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/layout.css">
 	<link rel="shortcut icon" href="images/favicon.png" >
@@ -20,7 +23,7 @@
                        </div>
                        <div class="top-header-block2">
                            <div class="search">
-                               <span style="margin-right: 5px;">Search</span> <i class="fa fa-search" aria-hidden="true"></i>
+                               <span style="margin-right: 8px;">Search</span> <i class="fa fa-search" aria-hidden="true"></i>
                            </div>
                            <div class="social-icons">
                                <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
@@ -48,7 +51,7 @@
                    <div class="col-sm-12 col-md-12 col-lg-12">
                        <div class="header-block" style="position: relative">
                            <div class="logo">
-                               <img src="images/iic-logo-5000x1574.png" width="100px">
+                               <img src="images/iic-logo-5000x1574.png" width="117px">
                            </div>
                            <div>
                                <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -110,8 +113,8 @@
 
    <div class="col-sm-12 col-md-12 col-lg-12 main-block">
        <div class="container">
-           <div class="row" style="margin-bottom: 60px">
-               <div class="col-sm-12 col-md-6 col-lg-6">
+           <div class="row" style="margin-bottom: 72px">
+               <div class="col-sm-12 col-md-6 col-lg-6" style="padding-right: 16px; width: 664px; margin-right: 32px;">
                    <div class="img_1">
                        <div class="img-content-top">
                            <p class="name">Name Surname</p>
@@ -124,7 +127,7 @@
                        </div>
                    </div>
                </div>
-               <div class="col-sm-12 col-md-6 col-lg-6">
+               <div class="col-sm-12 col-md-6 col-lg-6" style="padding-left: 16px; width: 664px;">
                    <div class="img_2">
                        <div class="img-content-top">
                            <p class="name">Name Surname</p>
@@ -136,7 +139,7 @@
                            <p>Apple has unveiled its full lineup for WWDC20.</p>
                        </div>
                    </div>
-                   <div style="display: flex">
+                   <div style="display: flex; width: 664px;">
                        <div class="img_3">
                            <div class="img-content-top">
                                <p class="name">Name Surname</p>
@@ -538,7 +541,8 @@
            </div>
            <div class="col-sm-12 col-md-6 col-lg-4 most-viewed">
                <div class="most-viewed-title">
-                   <h2>Most Viewed</h2>
+                   <!--<h2>Most Viewed</h2>-->
+                   <h2>Featured stories</h2>
                </div>
                <div class="most-viewed-item">
                    <h4>Bell Launches 5G Wireless Network in 5 Cities;</h4>
@@ -663,7 +667,7 @@
            <div class="container">
                <div class="row">
                    <div class="col-sm-12 col-md-12 col-lg-12">
-                        <div class="col-sm-12 col-md-6 col-lg-2">
+                        <div class="col-sm-12 col-md-6 col-lg-3">
                             <div class="footer-title">
                                 <span>Categories</span>
                             </div>
@@ -723,18 +727,18 @@
                                </ul>
                            </div>
                        </div>
-                       <div class="col-sm-12 col-md-6 col-lg-4">
-                           <div class="footer-title">
+                       <div class="col-sm-12 col-md-6 col-lg-3">
+                           <div class="footer-title subscribe">
                                <span>Subscribe to our mailing list</span>
                            </div>
                            <div class="footer-subscribe">
-                               <div>
+                               <div class="footer-subscribe-block1">
                                    <span>Yes, send me daily emails with Apple news!</span>
                                </div>
-                               <div>
+                               <div class="footer-subscribe-block2">
                                    <input type="email" placeholder="Email Address">
                                </div>
-                               <div style="display: flex">
+                               <div class="footer-subscribe-block3" style="display: flex">
                                    <input type="checkbox" style="margin-right: 10px" checked>
                                    <span style="display: flex; align-items: center">I agree to terms and conditions. </span>
                                </div>
